# smtp-relay

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: config.rs  lib.rs  main.rs
src/smtp/: mod.rs  session.rs
src/strategies/: mod.rs  resend.rs  webhook.rs
