[package]
name = "smtp-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.101"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

